[gd_scene load_steps=6 format=2]

[ext_resource path="res://fade_in/Fadein.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/PressToStartButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameJam imports/Title Name.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://GameJam imports/TitleScreenPic.png" type="Texture" id=5]

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 776.0
color = Color( 0.431373, 0.509804, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 704.0
margin_bottom = 420.0
rect_scale = Vector2( 0.312632, 0.312632 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_right = 784.0
margin_bottom = 440.0
rect_scale = Vector2( 0.406169, 0.406169 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 784.0
margin_bottom = 155.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Title Box" type="ColorRect" parent="Menu/Logo"]
visible = false
show_behind_parent = true
margin_left = 97.0
margin_top = 27.0
margin_right = 694.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 159.0
margin_right = 784.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 784.0
margin_bottom = 281.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 2

[node name="PressToStartButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 221.0
margin_right = 784.0
margin_bottom = 281.0
scene_to_load = "res://World 1/World1.tscn"

[node name="PTS Box" type="ColorRect" parent="Menu/CenterRow/Buttons/PressToStartButton"]
show_behind_parent = true
margin_left = 199.424
margin_top = -20.5437
margin_right = 594.424
margin_bottom = 57.4563
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fadein" parent="." instance=ExtResource( 1 )]
[connection signal="fade_finished" from="Fadein" to="." method="_on_Fadein_fade_finished"]
